@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 Release Candidate 1
+- Fixed problem preventing startup errors from being displayed. (Marcus)
 - Fixed zero bytes memory allocation when no extra ini files are found in the
   --with-config-file-scan-dir specified directory. (Eric Colinet, Derick)
 - Fixed start-up problem if both SPL and SimpleXML were enabled. The double
